<resources>
    <string name="app_name">locate-photo-app</string>
    <string name="view_images">View Images</string>
    <string name="take_photo">Take a photo</string>
    <string name="settings">Settings</string>
    <string name="location_text_color">COLOR OF LOCATION TEXT IN PHOTO</string>
    <string name="save">SAVE</string>
    <string name="location_text_size">SIZE OF LOCATION TEXT IN PHOTO</string>
    <string name="gallery_item">gallery_item</string>
    <string name="img_location">IMG_LOCATION</string>
    <string name="img_name">IMG_NAME</string>

    <string-array name="colors_arr">
        <item>WHITE</item>
        <item>BLACK</item>
        <item>BLUE</item>
        <item>YELLOW</item>
        <item>RED</item>
        <item>GREEN</item>
        <item>GREY</item>
        <item>MAGENTA</item>
    </string-array>

</resources>
